c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/assign_to_string_literal.c
int main(void) {
    // you can't assign to a string literal;
    // it decays to a pointer to string's first element, which isn't an lvalue
    "foo" = "bar";
    return 0;
}